; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8192e/rtl8192e/extr_rtl_pm.c_rtl92e_resume.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8192e/rtl8192e/extr_rtl_pm.c_rtl92e_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.net_device = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.net_device*)* }
%struct.r8192_priv = type { i64, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [38 x i8] c"================>r8192E resume call.\0A\00", align 1
@PCI_D0 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [36 x i8] c"pci_enable_device failed on resume\0A\00", align 1
@.str.2 = private unnamed_addr constant [44 x i8] c"RTL819XE:UI is open out of resume function\0A\00", align 1
@eRfOn = common dso_local global i32 0, align 4
@RF_CHANGE_BY_INIT = common dso_local global i32 0, align 4
@COMP_POWER = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [38 x i8] c"<================r8192E resume call.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtl92e_resume(%struct.pci_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.r8192_priv*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pci_dev* %0, %struct.pci_dev** %3, align 8
  %8 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %9 = call %struct.net_device* @pci_get_drvdata(%struct.pci_dev* %8)
  store %struct.net_device* %9, %struct.net_device** %4, align 8
  %10 = load %struct.net_device*, %struct.net_device** %4, align 8
  %11 = call %struct.r8192_priv* @rtllib_priv(%struct.net_device* %10)
  store %struct.r8192_priv* %11, %struct.r8192_priv** %5, align 8
  %12 = load %struct.net_device*, %struct.net_device** %4, align 8
  %13 = call i32 @netdev_info(%struct.net_device* %12, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %14 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %15 = load i32, i32* @PCI_D0, align 4
  %16 = call i32 @pci_set_power_state(%struct.pci_dev* %14, i32 %15)
  %17 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %18 = call i32 @pci_enable_device(%struct.pci_dev* %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %1
  %22 = load %struct.net_device*, %struct.net_device** %4, align 8
  %23 = call i32 @netdev_err(%struct.net_device* %22, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %2, align 4
  br label %90

25:                                               ; preds = %1
  %26 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %27 = call i32 @pci_restore_state(%struct.pci_dev* %26)
  %28 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %29 = call i32 @pci_read_config_dword(%struct.pci_dev* %28, i32 64, i32* %7)
  %30 = load i32, i32* %7, align 4
  %31 = and i32 %30, 65280
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %25
  %34 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %35 = load i32, i32* %7, align 4
  %36 = and i32 %35, -65281
  %37 = call i32 @pci_write_config_dword(%struct.pci_dev* %34, i32 64, i32 %36)
  br label %38

38:                                               ; preds = %33, %25
  %39 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %40 = load i32, i32* @PCI_D0, align 4
  %41 = call i32 @pci_enable_wake(%struct.pci_dev* %39, i32 %40, i32 0)
  %42 = load %struct.r8192_priv*, %struct.r8192_priv** %5, align 8
  %43 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = icmp eq i64 %44, 0
  br i1 %45, label %46, label %50

46:                                               ; preds = %38
  %47 = load %struct.r8192_priv*, %struct.r8192_priv** %5, align 8
  %48 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %47, i32 0, i32 2
  %49 = call i32 @rtl92e_check_rfctrl_gpio_timer(i32* %48)
  br label %50

50:                                               ; preds = %46, %38
  %51 = load %struct.net_device*, %struct.net_device** %4, align 8
  %52 = call i32 @netif_running(%struct.net_device* %51)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %57, label %54

54:                                               ; preds = %50
  %55 = load %struct.net_device*, %struct.net_device** %4, align 8
  %56 = call i32 @netdev_info(%struct.net_device* %55, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.2, i64 0, i64 0))
  br label %87

57:                                               ; preds = %50
  %58 = load %struct.net_device*, %struct.net_device** %4, align 8
  %59 = call i32 @netif_device_attach(%struct.net_device* %58)
  %60 = load %struct.net_device*, %struct.net_device** %4, align 8
  %61 = getelementptr inbounds %struct.net_device, %struct.net_device* %60, i32 0, i32 0
  %62 = load %struct.TYPE_3__*, %struct.TYPE_3__** %61, align 8
  %63 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %62, i32 0, i32 0
  %64 = load i32 (%struct.net_device*)*, i32 (%struct.net_device*)** %63, align 8
  %65 = icmp ne i32 (%struct.net_device*)* %64, null
  br i1 %65, label %66, label %74

66:                                               ; preds = %57
  %67 = load %struct.net_device*, %struct.net_device** %4, align 8
  %68 = getelementptr inbounds %struct.net_device, %struct.net_device* %67, i32 0, i32 0
  %69 = load %struct.TYPE_3__*, %struct.TYPE_3__** %68, align 8
  %70 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %69, i32 0, i32 0
  %71 = load i32 (%struct.net_device*)*, i32 (%struct.net_device*)** %70, align 8
  %72 = load %struct.net_device*, %struct.net_device** %4, align 8
  %73 = call i32 %71(%struct.net_device* %72)
  br label %74

74:                                               ; preds = %66, %57
  %75 = load %struct.r8192_priv*, %struct.r8192_priv** %5, align 8
  %76 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %75, i32 0, i32 1
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %76, align 8
  %78 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %77, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = icmp ne i32 %79, 0
  br i1 %80, label %86, label %81

81:                                               ; preds = %74
  %82 = load %struct.net_device*, %struct.net_device** %4, align 8
  %83 = load i32, i32* @eRfOn, align 4
  %84 = load i32, i32* @RF_CHANGE_BY_INIT, align 4
  %85 = call i32 @rtl92e_set_rf_state(%struct.net_device* %82, i32 %83, i32 %84)
  br label %86

86:                                               ; preds = %81, %74
  br label %87

87:                                               ; preds = %86, %54
  %88 = load i32, i32* @COMP_POWER, align 4
  %89 = call i32 @RT_TRACE(i32 %88, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %90

90:                                               ; preds = %87, %21
  %91 = load i32, i32* %2, align 4
  ret i32 %91
}

declare dso_local %struct.net_device* @pci_get_drvdata(%struct.pci_dev*) #1

declare dso_local %struct.r8192_priv* @rtllib_priv(%struct.net_device*) #1

declare dso_local i32 @netdev_info(%struct.net_device*, i8*) #1

declare dso_local i32 @pci_set_power_state(%struct.pci_dev*, i32) #1

declare dso_local i32 @pci_enable_device(%struct.pci_dev*) #1

declare dso_local i32 @netdev_err(%struct.net_device*, i8*) #1

declare dso_local i32 @pci_restore_state(%struct.pci_dev*) #1

declare dso_local i32 @pci_read_config_dword(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @pci_write_config_dword(%struct.pci_dev*, i32, i32) #1

declare dso_local i32 @pci_enable_wake(%struct.pci_dev*, i32, i32) #1

declare dso_local i32 @rtl92e_check_rfctrl_gpio_timer(i32*) #1

declare dso_local i32 @netif_running(%struct.net_device*) #1

declare dso_local i32 @netif_device_attach(%struct.net_device*) #1

declare dso_local i32 @rtl92e_set_rf_state(%struct.net_device*, i32, i32) #1

declare dso_local i32 @RT_TRACE(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
